Added the ability to change what server/port you are connected too
Thanks to @peterhaneve we have dialog boxes without losing our sanity (from those)

--- a/ZTransport.csproj
+++ b/ZTransport.csproj
@@ -53,6 +53,9 @@
     <Reference Include="0Harmony">
       <HintPath>lib\0Harmony.dll</HintPath>
     </Reference>
+    <Reference Include="PeterHan.PLib">
+      <HintPath>lib\PLib.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>lib\Assembly-CSharp.dll</HintPath>
     </Reference>
@@ -66,6 +69,12 @@
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>lib\UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.TextRenderingModule">
+      <HintPath>lib\UnityEngine.TextRenderingModule.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>lib\Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>lib\Newtonsoft.Json.dll</HintPath>
@@ -88,6 +97,7 @@
     <Compile Include="MatPacketSender.cs" />
     <Compile Include="Network.cs" />
     <Compile Include="Patches.cs" />
+    <Compile Include="ZTransporter.cs" />
     <Compile Include="Z.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
