Adding in per-world server/port saving.
It was a huge pain, lots-o-help from @SolraBizna,
@peterhaneve for suggesting serialization annotations/event handlers, and
@Cairath for 'isaveloadable is your friend'

--- a/ZTransport.csproj
+++ b/ZTransport.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Network.cs" />
     <Compile Include="Patches.cs" />
     <Compile Include="ZTransporter.cs" />
+    <Compile Include="ZServerInfoSaver.cs" />
     <Compile Include="Z.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
