--- a/ZTransport.csproj
+++ b/ZTransport.csproj
@@ -102,6 +102,7 @@
     <Compile Include="ZConnectionStatusDisplayer.cs" />
     <Compile Include="ZServerInfoSaver.cs" />
     <Compile Include="Z.cs" />
+    <Compile Include="OperationalGlueShimThing.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
