Added item sending and receiving

--- a/ZTransport.csproj
+++ b/ZTransport.csproj
@@ -96,13 +96,19 @@
     <Compile Include="src\JoulesSenderConfig.cs" />
     <Compile Include="src\LiquidRecverConfig.cs" />
     <Compile Include="src\LiquidSenderConfig.cs" />
+    <Compile Include="src\DropBoxOutConfig.cs" />
+    <Compile Include="src\DropBoxInConfig.cs" />
+    <Compile Include="src\ObjectSender.cs" />
+    <Compile Include="src\ObjectRecver.cs" />
     <Compile Include="src\MatPacketRecver.cs" />
     <Compile Include="src\MatPacketSender.cs" />
     <Compile Include="src\Network.cs" />
     <Compile Include="src\Patches.cs" />
     <Compile Include="src\ZTransporter.cs" />
     <Compile Include="src\ZConfigButton.cs" />
+    <Compile Include="src\DropBoxSendButton.cs" />
     <Compile Include="src\ZConnectionStatusDisplayer.cs" />
+    <Compile Include="src\DropBoxOutStatusDisplayer.cs" />
     <Compile Include="src\ZServerInfoSaver.cs" />
     <Compile Include="src\Z.cs" />
     <Compile Include="src\OperationalGlueShimThing.cs" />
