Added conveyor item transport, and added automation ports for all
Slightly inproved the way lights work (I know, it looks like such a small
change, but it took so much)
And more likely things wont get suspended in pipes on way to the server

--- a/ZTransport.csproj
+++ b/ZTransport.csproj
@@ -109,6 +109,8 @@
     <Compile Include="src\DropBoxSendButton.cs" />
     <Compile Include="src\ZConnectionStatusDisplayer.cs" />
     <Compile Include="src\DropBoxOutStatusDisplayer.cs" />
+    <Compile Include="src\ConveyorSenderConfig.cs" />
+    <Compile Include="src\ConveyorRecverConfig.cs" />
     <Compile Include="src\ZServerInfoSaver.cs" />
     <Compile Include="src\Z.cs" />
     <Compile Include="src\OperationalGlueShimThing.cs" />
