--- a/ZTransport.csproj
+++ b/ZTransport.csproj
@@ -96,8 +96,8 @@
     <Compile Include="src\JoulesSenderConfig.cs" />
     <Compile Include="src\LiquidRecverConfig.cs" />
     <Compile Include="src\LiquidSenderConfig.cs" />
-    <Compile Include="src\DropBoxOutConfig.cs" />
-    <Compile Include="src\DropBoxInConfig.cs" />
+    <Compile Include="src\DropBoxSenderConfig.cs" />
+    <Compile Include="src\DropBoxRecverConfig.cs" />
     <Compile Include="src\ObjectSender.cs" />
     <Compile Include="src\ObjectRecver.cs" />
     <Compile Include="src\MatPacketRecver.cs" />
@@ -108,7 +108,7 @@
     <Compile Include="src\ZConfigButton.cs" />
     <Compile Include="src\DropBoxSendButton.cs" />
     <Compile Include="src\ZConnectionStatusDisplayer.cs" />
-    <Compile Include="src\DropBoxOutStatusDisplayer.cs" />
+    <Compile Include="src\DropBoxSenderStatusDisplayer.cs" />
     <Compile Include="src\ConveyorSenderConfig.cs" />
     <Compile Include="src\ConveyorRecverConfig.cs" />
     <Compile Include="src\ZServerInfoSaver.cs" />
